# Software-Version1

./: Armory.cpp  Armory.h  CMakeLists.txt  Enemy.cpp  Enemy.h  EnemyFactory.cpp  EnemyFactory.h  Fight.cpp  Fight.h  Game.cpp  Game.h  Grotte.cpp  Grotte.h  GrotteFactory.cpp  GrotteFactory.h  Hero.cpp  Hero.h  Weapon.cpp  Weapon.h  WeaponFactory.cpp  WeaponFactory.h  exe  main.cpp  myDataBase.db  my_program
